2004-05-06 Colin McCormack <colin@chinix.com>
	* lib/mail.tcl: new mail facility using tcllib's smtp client
	* bin/httpd.tcl, bin/tclhttpd.rc: -mail option for mail server

2004-05-06 Brent Welch <welch@panasas.com>
        * Various doc updates

2004-05-05 Brent Welch <welch@panasas.com>
        * Various doc updates
        * lib/digest.tcl: fixed use of the md5 package

2004-05-01 Colin McCormack <colin@chinix.com>
	* lib/session.tcl: added a facility to destroy a session cookie.
	Added type name to session cookie name
	* lib/cookie.tcl: added ability to expunge cookies from client.

2004-04-29 Colin McCormack <colin@chinix.com>
	* lib/stdin.tcl: removed history proc which interferes with 
	some third party console packages to no legitimate purpose.

2004-04-29 Colin McCormack <colin@chinix.com>
	* lib/template.tcl: allow non-dynamic templates to control
	content type of returned file.
	* lib/httpd.tcl: fixed sf error '[925210] bad message length in Httpd_Error'
	* lib/cookie.tcl: removed redundant test
	* lib/status.tcl: fixed sf bug '[943990] Status/text uses wrong counter names'
	per patch supplied.
	
2004-04-27 Colin McCormack <colin@chinix.com>
	* src/crypt.c: added a test for error return from crypt()
	* lib/{fallback,mtype,template}.tcl: corrected and extended source
	comments

2004-04-23 Colin McCormack <colin@chinix.com>
	* bin/httpdthread.tcl: added a missing package require httpd::digest

2004-04-20 Brent Welch <welch@panasas.com>
	* lib/session.tcl: Fixed a couple of typos.  Moved the
        "file mkdir" of the sessions save directory into Session_Save
        because this doesn't work in the starkit version.  We should
        still fix the default sessions dir so it isn't under htdocs

2004-04-20 Brent Welch <welch@panasas.com>
	* DIST_build/DIST: Added generation of tclhttpd.kit starkit

2004-04-21 Colin McCormack <colin@chinix.com>
	* lib/session.tcl: added optional MD5 long session IDs,
	cookie sessions, persistent sessions.